--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "gimura-preprocessor-lib"
 version = "0.1.0"
 edition = "2021"
+description = "A small library for file peprocessing."
+license = "MIT"
 
 [dependencies]
 glob = "0.3.1"
